--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "venv/bin/python",
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "black"
 }
